Convert StatusCode to Record class